examples/realtime_runing_log.txt
(oneLCA-TEA_pg) PS C:\Github\oneLCA-TEA_Phosphogypsum> python scripts/build_knowledge_graph.py --step index --parser mineru --engine lightrag --limit 1

============================================================
   PG-LCA-TEA KNOWLEDGE GRAPH PIPELINE
============================================================
Start time: 2026-04-11 12:29:38
Steps to run: ['index']
RAG Engine: lightrag

============================================================
   STEP 2: LIGHTRAG INDEX CONSTRUCTION
============================================================
LightRAG DB: C:\Github\oneLCA-TEA_Phosphogypsum\data\processed\lightrag_db
Source:      C:\Github\oneLCA-TEA_Phosphogypsum\data\raw\papers\parsed
LLM Model:   qwen3.5:35b

Note: Entity extraction uses your LLM (see LLM_BASE_URL / LLM_MODEL in .env).
INFO: [] Created new empty graph file: C:\Github\oneLCA-TEA_Phosphogypsum\data\processed\lightrag_db\graph_chunk_entity_relation.graphml   
INFO:nano-vectordb:Init {'embedding_dim': 2560, 'metric': 'cosine', 'storage_file': 'C:\\Github\\oneLCA-TEA_Phosphogypsum\\data\\processed\INFO: [] Created new empty graph file: C:\Github\oneLCA-TEA_Phosphogypsum\data\processed\lightrag_db\graph_chunk_entity_relation.graphml   
INFO:nano-vectordb:Init {'embedding_dim': 2560, 'metric': 'cosine', 'storage_file': 'C:\\Github\\oneLCA-TEA_Phosphogypsum\\data\\processed\INFO:nano-vectordb:Init {'embedding_dim': 2560, 'metric': 'cosine', 'storage_file': 'C:\\Github\\oneLCA-TEA_Phosphogypsum\\data\\processed\\lightrag_db\\vdb_entities.json'} 0 data
INFO:nano-vectordb:Init {'embedding_dim': 2560, 'metric': 'cosine', 'storage_file': 'C:\\Github\\oneLCA-TEA_Phosphogypsum\\data\\processed\\lightrag_db\\vdb_relationships.json'} 0 data
INFO:nano-vectordb:Init {'embedding_dim': 2560, 'metric': 'cosine', 'storage_file': 'C:\\Github\\oneLCA-TEA_Phosphogypsum\\data\\processed\\lightrag_db\\vdb_chunks.json'} 0 data
INFO: [] Process 41888 KV load full_docs with 0 records
INFO: [] Process 41888 KV load text_chunks with 0 records
INFO: [] Process 41888 KV load full_entities with 0 records
INFO: [] Process 41888 KV load full_relations with 0 records
INFO: [] Process 41888 KV load entity_chunks with 0 records
INFO: [] Process 41888 KV load relation_chunks with 0 records
INFO: [] Process 41888 KV load llm_response_cache with 0 records
INFO: [] Process 41888 doc status load doc_status with 0 records
[1/1] Processing: 1. Environmental impact and management of phosphog...
INFO: Processing 1 document(s)
INFO: Extracting stage 1/1: unknown_source
INFO: Processing d-id: doc-be41626203eeb49e7c80f800587eab85
INFO: Embedding func: 8 new workers initialized (Timeouts: Func: 120s, Worker: 240s, Health Check: 255s)
INFO: LLM func: 4 new workers initialized (Timeouts: Func: 900s, Worker: 1800s, Health Check: 1815s)
INFO:openai._base_client:Retrying request to /chat/completions in 0.448690 seconds
INFO:openai._base_client:Retrying request to /chat/completions in 0.379867 seconds
INFO:openai._base_client:Retrying request to /chat/completions in 0.766124 seconds
INFO:  == LLM cache == saving: default:extract:a54b4655f24ccd93fa0c75b86f74dcb0
INFO:  == LLM cache == saving: default:extract:aa29dfb05798c88eb6bd02eba291fe81
INFO:  == LLM cache == saving: default:extract:1490ca3023e0998f1f5d756251693dd3
INFO:  == LLM cache == saving: default:extract:e92c4ec7e0b0c26d8628bbe00db05b08
INFO:  == LLM cache == saving: default:extract:f5c2be97d111b861f75cea1900c45c93
INFO:  == LLM cache == saving: default:extract:e54a135453e6627da63e2e644047c6cd
INFO:  == LLM cache == saving: default:extract:1bd5bbeed09417bec9a13007bc522694
INFO:  == LLM cache == saving: default:extract:c0b5579ee3b977e58f7344dc3b7dfcee
INFO: Chunk 1 of 23 extracted 67 Ent + 48 Rel chunk-353d1f2144d078e2f72e91dc948797cd
INFO: Chunk 2 of 23 extracted 57 Ent + 67 Rel chunk-4c63685c56f54818f0ba79268eff1e25
INFO: Chunk 3 of 23 extracted 52 Ent + 47 Rel chunk-eea2170321781fee171144c997d57fbd
INFO: Chunk 4 of 23 extracted 79 Ent + 51 Rel chunk-8655b2aa46a25a4770ebfc579e59fec0
INFO:  == LLM cache == saving: default:extract:d4b1ab1025ce7d92781096556d64435a
INFO:openai._base_client:Retrying request to /chat/completions in 0.386050 seconds
INFO:openai._base_client:Retrying request to /chat/completions in 0.913511 seconds
ERROR: LLM func: Error in decorated function for task 2109679336128_663361.984: Request timed out.
INFO:  == LLM cache == saving: default:extract:6c18bfe68d404a96cc01fb1fee6e4e7c
ERROR: Failed to extract entities and relationships: Request timed out.
ERROR: Traceback (most recent call last):
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\httpx\_transports\default.py", line 101, in map_httpcore_exceptions   
    yield
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\httpx\_transports\default.py", line 250, in handle_request
    resp = self._pool.handle_request(req)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\httpcore\_sync\connection_pool.py", line 256, in handle_request       
    raise exc from None
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\httpcore\_sync\connection_pool.py", line 236, in handle_request       
    response = connection.handle_request(
               ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\httpcore\_sync\connection.py", line 103, in handle_request
    return self._connection.handle_request(request)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\httpcore\_sync\http11.py", line 136, in handle_request
    raise exc
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\httpcore\_sync\http11.py", line 106, in handle_request
    ) = self._receive_response_headers(**kwargs)
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\httpcore\_sync\http11.py", line 177, in _receive_response_headers     
    event = self._receive_event(timeout=timeout)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\httpcore\_sync\http11.py", line 217, in _receive_event
    data = self._network_stream.read(
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\httpcore\_backends\sync.py", line 126, in read
    with map_exceptions(exc_map):
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\contextlib.py", line 158, in __exit__
    self.gen.throw(typ, value, traceback)
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\httpcore\_exceptions.py", line 14, in map_exceptions
    raise to_exc(exc) from exc
httpcore.ReadTimeout: timed out

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\openai\_base_client.py", line 1005, in request
    response = self._client.send(
               ^^^^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\httpx\_client.py", line 914, in send
    response = self._send_handling_auth(
               ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\httpx\_client.py", line 942, in _send_handling_auth
    response = self._send_handling_redirects(
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\httpx\_client.py", line 979, in _send_handling_redirects
    response = self._send_single_request(request)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\httpx\_client.py", line 1014, in _send_single_request
    response = transport.handle_request(request)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\httpx\_transports\default.py", line 249, in handle_request
    with map_httpcore_exceptions():
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\contextlib.py", line 158, in __exit__
    self.gen.throw(typ, value, traceback)
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\httpx\_transports\default.py", line 118, in map_httpcore_exceptions   
    raise mapped_exc(message) from exc
httpx.ReadTimeout: timed out

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\lightrag\operate.py", line 3110, in _process_with_semaphore
    result = await _process_single_content(chunk)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\lightrag\operate.py", line 2965, in _process_single_content
    final_result, timestamp = await use_llm_func_with_cache(
                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\lightrag\utils.py", line 2049, in use_llm_func_with_cache
    res: str = await use_llm_func(
               ^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\lightrag\utils.py", line 1026, in wait_func
    return await future
           ^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\lightrag\utils.py", line 730, in worker
    result = await asyncio.wait_for(
             ^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\asyncio\tasks.py", line 489, in wait_for
    return fut.result()
           ^^^^^^^^^^^^
  File "C:\Github\oneLCA-TEA_Phosphogypsum\pgloop\knowledge\lightrag_engine.py", line 308, in llm_func
    response = client.chat.completions.create(**request_kwargs)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\openai\_utils\_utils.py", line 286, in wrapper
    return func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\openai\resources\chat\completions\completions.py", line 1211, in create
    return self._post(
           ^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\openai\_base_client.py", line 1297, in post
    return cast(ResponseT, self.request(cast_to, opts, stream=stream, stream_cls=stream_cls))
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\openai\_base_client.py", line 1023, in request
    raise APITimeoutError(request=request) from err
openai.APITimeoutError: Request timed out.

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\lightrag\operate.py", line 3118, in _process_with_semaphore
    raise prefixed_exception from e
openai.APITimeoutError: Request timed out.

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\lightrag\lightrag.py", line 2052, in process_document
    chunk_results = await entity_relation_task
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\lightrag\lightrag.py", line 2341, in _process_extract_entities        
    raise e
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\lightrag\lightrag.py", line 2326, in _process_extract_entities        
    chunk_results = await extract_entities(
                    ^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Win11\anaconda3\envs\oneLCA-TEA_pg\Lib\site-packages\lightrag\operate.py", line 3160, in extract_entities
    raise prefixed_exception from first_exception
openai.APITimeoutError: Request timed out.

ERROR: Failed to extract document 1/1: unknown_source
INFO: Enqueued document processing pipeline stopped
    ✓ Indexed successfully

========================================
Indexed 1 / 1 documents
Working dir: C:\Github\oneLCA-TEA_Phosphogypsum\data\processed\lightrag_db

============================================================
   PIPELINE COMPLETE
============================================================
End time: 2026-04-11 15:16:36
(oneLCA-TEA_pg) PS C:\Github\oneLCA-TEA_Phosphogypsum> 